--- a/Setup/Applications/ad-capital-lab/Workflows/w4.yaml
+++ b/Setup/Applications/ad-capital-lab/Workflows/w4.yaml
@@ -31,6 +31,18 @@ phases:
     stepsInParallel: false
   - type: K8S_PHASE_STEP
     name: Verify
+    steps:
+    - type: APP_DYNAMICS
+      name: AppDynamics
+      properties:
+        analysisServerConfigId: OBr_qS2HT_CWN2XeMTDhqA
+        analysisTolerance: LOW
+        applicationId: '8'
+        comparisonStrategy: COMPARE_WITH_PREVIOUS
+        executeWithPreviousSteps: false
+        hostnameTemplate: ${host.hostName}
+        tierId: '15'
+        timeDuration: '10'
     stepsInParallel: false
   - type: K8S_PHASE_STEP
     name: Wrap Up
